removed short tracks from df output

--- a/Code/preliminary_eda.ipynb
+++ b/Code/preliminary_eda.ipynb
@@ -6,8 +6,8 @@
    "id": "6fba2017",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-24T20:41:14.890279Z",
-     "start_time": "2021-06-24T20:41:14.872775Z"
+     "end_time": "2021-06-29T17:38:29.632250Z",
+     "start_time": "2021-06-29T17:38:28.702092Z"
     }
    },
    "outputs": [],
@@ -29,12 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "138838d5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-24T20:31:43.533445Z",
-     "start_time": "2021-06-24T20:31:29.448658Z"
+     "end_time": "2021-06-29T17:38:40.785474Z",
+     "start_time": "2021-06-29T17:38:29.633294Z"
     }
    },
    "outputs": [],
@@ -45,12 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "992113f0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-24T20:41:17.555140Z",
-     "start_time": "2021-06-24T20:41:17.541137Z"
+     "end_time": "2021-06-29T17:38:40.790378Z",
+     "start_time": "2021-06-29T17:38:40.786640Z"
     }
    },
    "outputs": [
@@ -60,7 +60,7 @@
        "(pandas.core.frame.DataFrame, pandas.core.frame.DataFrame)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,12 +71,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "ff523603",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-24T20:42:09.885080Z",
-     "start_time": "2021-06-24T20:42:09.875078Z"
+     "end_time": "2021-06-29T17:38:40.798115Z",
+     "start_time": "2021-06-29T17:38:40.791938Z"
     }
    },
    "outputs": [],
@@ -86,12 +86,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "09178d74",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-24T20:46:12.059579Z",
-     "start_time": "2021-06-24T20:46:12.041076Z"
+     "end_time": "2021-06-29T17:38:40.812366Z",
+     "start_time": "2021-06-29T17:38:40.799122Z"
     }
    },
    "outputs": [
@@ -348,7 +348,7 @@
        "[106574 rows x 12 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,12 +359,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "163813c0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-24T20:36:07.037613Z",
-     "start_time": "2021-06-24T20:36:07.033113Z"
+     "end_time": "2021-06-29T17:38:40.815563Z",
+     "start_time": "2021-06-29T17:38:40.813126Z"
     }
    },
    "outputs": [
@@ -384,7 +384,7 @@
        " 'zcr'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,9 +395,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "2d065a94",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-29T17:38:40.849039Z",
+     "start_time": "2021-06-29T17:38:40.816267Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -811,7 +816,7 @@
        "[106574 rows x 84 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,12 +827,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "b37e6a49",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-24T20:31:06.121096Z",
-     "start_time": "2021-06-24T20:31:06.107095Z"
+     "end_time": "2021-06-29T17:38:40.855149Z",
+     "start_time": "2021-06-29T17:38:40.852108Z"
     }
    },
    "outputs": [],
@@ -839,12 +844,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "d0df0f58",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-24T20:31:06.152129Z",
-     "start_time": "2021-06-24T20:31:06.122596Z"
+     "end_time": "2021-06-29T17:38:40.866214Z",
+     "start_time": "2021-06-29T17:38:40.856498Z"
     }
    },
    "outputs": [],
@@ -854,12 +859,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "4275937b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-24T20:31:06.167611Z",
-     "start_time": "2021-06-24T20:31:06.153608Z"
+     "end_time": "2021-06-29T17:38:40.869772Z",
+     "start_time": "2021-06-29T17:38:40.867044Z"
     }
    },
    "outputs": [
@@ -869,7 +874,7 @@
        "(8000, 52)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,12 +885,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "e29e745c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-24T20:31:06.198616Z",
-     "start_time": "2021-06-24T20:31:06.170111Z"
+     "end_time": "2021-06-29T17:38:40.886495Z",
+     "start_time": "2021-06-29T17:38:40.870681Z"
     }
    },
    "outputs": [
@@ -1151,7 +1156,7 @@
        "[5 rows x 52 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,12 +1167,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "575055f7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-24T20:31:06.229621Z",
-     "start_time": "2021-06-24T20:31:06.201116Z"
+     "end_time": "2021-06-29T17:38:40.899396Z",
+     "start_time": "2021-06-29T17:38:40.887312Z"
     }
    },
    "outputs": [
@@ -1202,7 +1207,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1213,12 +1218,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "67bc9edd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-24T20:31:06.260627Z",
-     "start_time": "2021-06-24T20:31:06.231122Z"
+     "end_time": "2021-06-29T17:38:40.913445Z",
+     "start_time": "2021-06-29T17:38:40.900162Z"
     },
     "scrolled": true
    },
@@ -1485,7 +1490,7 @@
        "[5 rows x 518 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1496,12 +1501,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "33caecc5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-24T20:31:06.369159Z",
-     "start_time": "2021-06-24T20:31:06.262127Z"
+     "end_time": "2021-06-29T17:38:41.008673Z",
+     "start_time": "2021-06-29T17:38:40.914592Z"
     }
    },
    "outputs": [
@@ -1516,7 +1521,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1527,12 +1532,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 15,
    "id": "3f0cdffb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-24T20:31:06.384285Z",
-     "start_time": "2021-06-24T20:31:06.370661Z"
+     "end_time": "2021-06-29T17:38:41.010971Z",
+     "start_time": "2021-06-29T17:38:41.009484Z"
     }
    },
    "outputs": [],
@@ -1542,12 +1547,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 16,
    "id": "b6a65547",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-24T20:31:06.445943Z",
-     "start_time": "2021-06-24T20:31:06.385787Z"
+     "end_time": "2021-06-29T17:38:41.042515Z",
+     "start_time": "2021-06-29T17:38:41.011676Z"
     },
     "scrolled": true
    },
@@ -1559,12 +1564,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 17,
    "id": "11a3faf1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-24T20:31:06.476663Z",
-     "start_time": "2021-06-24T20:31:06.447658Z"
+     "end_time": "2021-06-29T17:38:41.056209Z",
+     "start_time": "2021-06-29T17:38:41.043270Z"
     }
    },
    "outputs": [
@@ -1830,7 +1835,7 @@
        "[5 rows x 521 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1841,12 +1846,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 18,
    "id": "99620126",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-24T20:31:06.492167Z",
-     "start_time": "2021-06-24T20:31:06.478164Z"
+     "end_time": "2021-06-29T17:38:41.059950Z",
+     "start_time": "2021-06-29T17:38:41.057091Z"
     }
    },
    "outputs": [
@@ -1863,7 +1868,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-78-6ed53c4ae0e6>:2: DeprecationWarning: Converting `np.inexact` or `np.floating` to a dtype is deprecated. The current result is `float64` which is not strictly correct.\n",
+      "<ipython-input-18-6ed53c4ae0e6>:2: DeprecationWarning: Converting `np.inexact` or `np.floating` to a dtype is deprecated. The current result is `float64` which is not strictly correct.\n",
       "  if dtype != np.number:\n"
      ]
     }
@@ -1876,12 +1881,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "id": "5a23349e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-24T20:31:06.507669Z",
-     "start_time": "2021-06-24T20:31:06.493667Z"
+     "end_time": "2021-06-29T17:38:41.069131Z",
+     "start_time": "2021-06-29T17:38:41.060898Z"
     }
    },
    "outputs": [],
@@ -1890,13 +1895,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "22614afc",
+   "metadata": {},
+   "source": [
+    "These tracks have known issues and are unreadable."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
+   "id": "5d5a4678",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-29T17:38:41.080165Z",
+     "start_time": "2021-06-29T17:38:41.069973Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.drop(['99134', '98567', '98569', '108925', '98565', '133297'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "415ff0ae",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-24T20:31:10.088521Z",
-     "start_time": "2021-06-24T20:31:06.509170Z"
+     "end_time": "2021-06-29T17:40:27.404443Z",
+     "start_time": "2021-06-29T17:40:24.460091Z"
     }
    },
    "outputs": [],
