added technical summary

--- a/Code/technical_summary.ipynb
+++ b/Code/technical_summary.ipynb
@@ -56,7 +56,25 @@
     "\n",
     "The mel frequency cepstral coefficients (mfccs) are an abstraction of a spectrogram that attempt to capture the components of an audio signal that describe for our perception of that signal. For instance in speech we have the concepts of vowels and consonants. These features describe the construction of a word and our understanding of that word. The mel frequency cepstral coefficients can not be compared directly to vowels and consonants but they abstract audio into components that describe what humans hear.\n",
     "\n",
-    "The first step to extracting mfccs is to preform the short time fourier transform on small time windows of the audio signal. This looks at sections of the signal and extracts the frequency components that make up that signal."
+    "start with wave\n",
+    "\n",
+    "\n",
+    "![waveform](../images/waveform.png)\n",
+    "\n",
+    "The first step to extracting mfccs is to preform the short time fourier transform on small time windows of the audio signal. This looks at sections of the signal and extracts the frequency components that make up that signal. This is the spectrogram of a 30 second clip of the song colorful lights which is track 065488 in the F.M.A.\n",
+    "\n",
+    "\n",
+    "![spectrogram](../images/stft.png)\n",
+    "\n",
+    "\n",
+    "\n",
+    "![mel filter bins](../images/mel_filter_bins.png)\n",
+    "\n",
+    "\n",
+    "![mel spectrogram](../images/mel_spec.png)\n",
+    "\n",
+    "\n",
+    "![mfccs.png](../images/mfccs.png)"
    ]
   },
   {
