cleaned up a little bit

--- a/Code/MFCC_spectrogram_generation.ipynb
+++ b/Code/MFCC_spectrogram_generation.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "454dc57d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-03T22:28:21.097430Z",
-     "start_time": "2021-07-03T22:28:19.337639Z"
+     "end_time": "2021-07-04T20:57:10.269133Z",
+     "start_time": "2021-07-04T20:57:08.392908Z"
     }
    },
    "outputs": [],
@@ -435,24 +435,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "2240c8e0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-29T15:57:27.875890Z",
-     "start_time": "2021-06-29T15:56:06.407735Z"
+     "end_time": "2021-07-04T21:30:01.517083Z",
+     "start_time": "2021-07-04T21:28:42.294501Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/icculus/anaconda3/envs/audio_processing/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3165: DtypeWarning: Columns (25821) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# mfcc_df = pd.DataFrame(data_dict).T\n",
     "mfcc_df = pd.read_csv('../data/mfcc_df.csv', index_col=0)"
@@ -460,12 +451,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "e40fe20d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-29T17:33:23.920780Z",
-     "start_time": "2021-06-29T17:33:23.909477Z"
+     "end_time": "2021-07-04T21:30:01.525456Z",
+     "start_time": "2021-07-04T21:30:01.518043Z"
     }
    },
    "outputs": [],
@@ -475,27 +466,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "id": "5e0bd169",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-29T17:40:55.405765Z",
-     "start_time": "2021-06-29T17:40:55.402342Z"
+     "end_time": "2021-07-04T21:30:01.538206Z",
+     "start_time": "2021-07-04T21:30:01.526355Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-360d02c836d0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmfcc_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'genre'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'track_genre_top'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "mfcc_df['genre'] = df['track_genre_top']"
+    "# mfcc_df['genre'] = df['track_genre_top']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "ebc2f00b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-29T17:40:56.298977Z",
-     "start_time": "2021-06-29T17:40:56.059834Z"
+     "end_time": "2021-07-04T21:31:26.607855Z",
+     "start_time": "2021-07-04T21:31:26.370937Z"
     }
    },
    "outputs": [
@@ -516,7 +519,7 @@
        "Length: 25821, dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,22 +540,7 @@
    },
    "outputs": [],
    "source": [
-    "mfcc_df.to_csv('../data/mfcc_df.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "ab1cecd2",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-07-03T22:29:51.039357Z",
-     "start_time": "2021-07-03T22:28:27.369333Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# mfcc_df = pd.read_csv('../data/mfcc_df.csv', index_col=0)"
+    "# mfcc_df.to_csv('../data/mfcc_df.csv')"
    ]
   },
   {
@@ -570,24 +558,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "1d06713d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-03T22:37:15.830828Z",
-     "start_time": "2021-07-03T22:32:06.993891Z"
+     "end_time": "2021-07-04T22:12:52.144048Z",
+     "start_time": "2021-07-04T22:12:51.828916Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-15-5b7c2aa35d96>:7: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"cmap\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
+      "  plt.savefig(f'../mfcc_specs/{top_genre}/{top_genre}_{track_idx}.png', cmap='gray')\n"
+     ]
+    }
+   ],
    "source": [
-    "for track_idx in mfcc_df.loc['133433':].index:\n",
-    "    \n",
+    "for track_idx in mfcc_df.index:\n",
+    "    print(track_idx)\n",
     "    mfcc_spec = mfcc_df.drop(columns='genre').loc[track_idx].values.reshape(20,1291)\n",
     "    top_genre = mfcc_df.loc[track_idx]['genre']\n",
     "    \n",
     "    librosa.display.specshow(mfcc_spec, cmap='binary')\n",
-    "    plt.savefig(f'../mfcc_specs/{top_genre}/{top_genre}_{track_idx}.png')\n",
-    "    plt.close()"
+    "    plt.savefig(f'../mfcc_specs/{top_genre}/{top_genre}_{track_idx}.png', cmap='gray')\n",
+    "    plt.close()\n",
+    "    break"
    ]
   },
   {
