--- a/Code/neural_net_1.ipynb
+++ b/Code/neural_net_1.ipynb
@@ -6,8 +6,8 @@
    "id": "bcc4eaf1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T13:31:42.113724Z",
-     "start_time": "2021-06-30T13:31:39.430906Z"
+     "end_time": "2021-07-05T21:06:15.167591Z",
+     "start_time": "2021-07-05T21:06:14.023349Z"
     }
    },
    "outputs": [],
@@ -20,7 +20,8 @@
     "from tensorflow.keras.layers import Dense, Flatten, Dropout, Conv2D, MaxPooling2D\n",
     "from tensorflow.keras.utils import to_categorical\n",
     "from tensorflow.keras.regularizers import l2\n",
-    "from tensorflow.keras import backend as K"
+    "from tensorflow.keras import backend as K\n",
+    "from keras.utils import plot_model"
    ]
   },
   {
@@ -781,41 +782,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "921f9f76",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T13:33:13.495146Z",
-     "start_time": "2021-06-30T13:33:13.427900Z"
+     "end_time": "2021-07-05T21:06:32.133507Z",
+     "start_time": "2021-07-05T21:06:32.118580Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "conv2d (Conv2D)              (None, 18, 1289, 32)      320       \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d (MaxPooling2D) (None, 9, 644, 32)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_1 (Conv2D)            (None, 7, 642, 64)        18496     \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 3, 321, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 61632)             0         \n",
-      "_________________________________________________________________\n",
-      "dense (Dense)                (None, 64)                3944512   \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 8)                 520       \n",
-      "=================================================================\n",
-      "Total params: 3,963,848\n",
-      "Trainable params: 3,963,848\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
+     "ename": "NameError",
+     "evalue": "name 'X_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-35489373210f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m model.add(Conv2D(32,\n\u001b[1;32m      4\u001b[0m                  \u001b[0mactivation\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'relu'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m                  \u001b[0minput_shape\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m                  kernel_size=(3,3)))\n\u001b[1;32m      7\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMaxPooling2D\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'X_train' is not defined"
      ]
     }
    ],
@@ -863,9 +847,43 @@
     "# model.summary()\n",
     "\n",
     "model.add(Dense(8,\n",
-    "                activation='softmax'))\n",
+    "                activation='softmax'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "47ad7087",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-05T21:06:29.022095Z",
+     "start_time": "2021-07-05T21:06:28.864990Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-5f15418b3570>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
+     ]
+    }
+   ],
+   "source": [
     "model.summary()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d00809fe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
