--- a/Code/mfcc_image_recongnition_nn.ipynb
+++ b/Code/mfcc_image_recongnition_nn.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "4a155de9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-05T22:00:47.402143Z",
-     "start_time": "2021-07-05T22:00:47.398474Z"
+     "end_time": "2021-07-06T13:29:28.691334Z",
+     "start_time": "2021-07-06T13:29:27.547849Z"
     }
    },
    "outputs": [],
@@ -26,12 +26,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "965fec01",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-04T20:48:50.785349Z",
-     "start_time": "2021-07-04T20:48:50.782824Z"
+     "end_time": "2021-07-06T13:29:31.907387Z",
+     "start_time": "2021-07-06T13:29:31.904382Z"
     }
    },
    "outputs": [],
@@ -41,12 +41,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "id": "4045d1de",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-04T22:55:44.321532Z",
-     "start_time": "2021-07-04T22:55:44.104350Z"
+     "end_time": "2021-07-06T13:34:43.185902Z",
+     "start_time": "2021-07-06T13:34:42.964531Z"
     }
    },
    "outputs": [
@@ -70,7 +70,6 @@
     "\n",
     "validation_generator = datagen.flow_from_directory('../mfcc_specs/',\n",
     "                                                  target_size=(216,144),\n",
-    "                                                  batch_size=64,\n",
     "                                                  color_mode='grayscale',\n",
     "                                                  shuffle=True,\n",
     "                                                  interpolation='lanczos',\n",
@@ -79,12 +78,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "115cc979",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-04T17:59:30.104182Z",
-     "start_time": "2021-07-04T17:59:30.101088Z"
+     "end_time": "2021-07-06T13:32:25.158327Z",
+     "start_time": "2021-07-06T13:32:25.154063Z"
     }
    },
    "outputs": [
@@ -101,7 +100,7 @@
        " 'Rock': 7}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,12 +111,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "id": "30a87fab",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-04T22:55:47.224645Z",
-     "start_time": "2021-07-04T22:55:47.212549Z"
+     "end_time": "2021-07-06T13:32:25.662124Z",
+     "start_time": "2021-07-06T13:32:25.651130Z"
     },
     "scrolled": true
    },
@@ -923,7 +922,7 @@
        " 'Rock/Rock_110546.png']"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,12 +933,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "id": "18002802",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-04T22:52:44.550116Z",
-     "start_time": "2021-07-04T22:52:44.546447Z"
+     "end_time": "2021-07-06T13:32:27.808590Z",
+     "start_time": "2021-07-06T13:32:27.805574Z"
     }
    },
    "outputs": [
@@ -949,7 +948,7 @@
        "'grayscale'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,178 +959,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "b8fcd38b",
+   "execution_count": 35,
+   "id": "b6356de9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-04T22:59:23.528541Z",
-     "start_time": "2021-07-04T22:59:23.522789Z"
-    }
+     "end_time": "2021-07-06T13:36:22.969957Z",
+     "start_time": "2021-07-06T13:36:22.884756Z"
+    },
+    "scrolled": false
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([677, 688, 194, 276, 213, 774, 113, 615, 524, 260, 621, 399, 407,\n",
-       "       473, 142, 109,  18, 538, 696, 666, 767, 425, 417, 679,  84, 307,\n",
-       "       733, 574, 714, 353, 430, 582, 782, 528, 691, 103, 257, 192, 763,\n",
-       "       525,  76, 101, 487,  97,  55,   2, 409, 365, 612, 224, 560,  11,\n",
-       "       439,  75, 751, 693, 451,  19,  24, 321,  38, 783, 493, 646, 758,\n",
-       "         0, 159,  74, 476, 744, 517, 433, 130, 135, 467, 179, 501, 427,\n",
-       "       385,  20,  95, 144, 627, 148,  93, 155, 498,  39, 125, 111, 595,\n",
-       "       251, 483, 360, 306, 379, 583, 403,  16,  25, 161, 127, 644, 480,\n",
-       "       222, 175, 653, 153, 496,   8, 205, 605, 470,  63, 388, 472, 519,\n",
-       "       436, 638, 415, 128, 234,   9, 350, 698, 336,  28, 604, 753, 745,\n",
-       "       108, 238, 119, 138, 174, 579, 386, 288, 554, 630, 504, 397, 220,\n",
-       "       189, 531,  73, 334, 438, 511, 308, 457, 567, 256, 370, 748, 129,\n",
-       "       324, 712, 286, 141, 253, 539, 223, 160, 566, 623, 284, 293,   4,\n",
-       "       750, 510, 787, 757, 721, 550,  91, 502, 715, 708, 631, 784, 320,\n",
-       "       363, 198, 509, 466, 610, 655, 743, 182, 515, 303, 606, 442, 290,\n",
-       "       444, 616, 299, 389,  56, 592, 406, 275, 523,  90, 775, 405,  44,\n",
-       "       312,  62, 659,  87, 707,  89, 755, 596, 508, 647, 304, 137, 460,\n",
-       "       151, 766,  12, 280, 259,  33, 349, 134, 681,  61, 272, 506, 199,\n",
-       "       689,  37, 278, 448, 289,  58, 254, 526, 556, 395, 477, 785, 271,\n",
-       "       633, 634, 191, 701, 724, 660,  13, 145, 613, 422, 106, 792, 149,\n",
-       "       203, 494,  77, 351, 761,  48,  67, 208,  80, 651, 201, 513, 202,\n",
-       "        54, 215, 355, 169, 384, 461, 790, 540,  14, 112, 368, 327,  41,\n",
-       "       718, 184, 452, 431, 672, 383, 587, 465, 562, 229, 632, 371, 239,\n",
-       "       570, 393, 136, 344, 791, 270,   3, 294, 252, 297, 410, 678, 611,\n",
-       "       576, 671, 536, 505, 230, 794, 564, 362, 214, 196,  42, 172, 455,\n",
-       "       746, 600, 760, 318, 315,  94, 126, 586, 366, 737, 656, 662, 489,\n",
-       "       378, 778, 421, 475, 749,  51,  46, 400, 285, 265,  32, 781, 740,\n",
-       "       241, 338, 637, 163, 594,   7, 458, 555, 348, 207, 401, 269, 709,\n",
-       "       152,  60, 729, 164, 317,  88, 624, 263, 687, 602, 788, 544, 786,\n",
-       "       264, 636, 146, 243, 464, 699, 310, 764,  29, 396,  85, 607, 258,\n",
-       "       768,  45, 181, 690, 549, 408, 670, 301, 485, 710, 236, 552, 484,\n",
-       "        22, 262, 795,  81, 614, 114, 211, 495, 625, 516, 478, 581, 669,\n",
-       "       183, 186, 776, 719, 608, 300, 325, 533, 283, 250, 756, 240, 463,\n",
-       "       319,  49, 416,  23, 598, 450,   5, 546, 440, 291, 322, 739, 156,\n",
-       "       667, 514, 541,  68, 428,  65, 481, 664, 588, 147, 697, 432, 118,\n",
-       "       534, 530, 311, 197, 176, 529,  70, 459, 244, 340, 585,  34, 387,\n",
-       "       435, 551, 454, 332, 166, 571,  83, 171, 121, 110, 609, 412, 100,\n",
-       "       242, 402,  30,  98, 188, 233, 716, 424, 150, 341, 641,  10, 578,\n",
-       "         1, 232, 255, 559,  50, 676, 547, 593, 469, 735, 520, 759, 532,\n",
-       "       381,  86, 642, 132, 309, 154, 591, 617, 193, 361, 557, 377, 277,\n",
-       "       376, 394, 357, 499,  21, 180,  66, 414,  31, 419, 426, 468, 573,\n",
-       "        72, 772, 167, 703, 246, 599, 447, 404, 305, 295, 577, 228, 629,\n",
-       "       177, 102, 736, 639, 170, 754, 302, 680, 116, 437, 212, 725, 522,\n",
-       "       139, 429, 770,  69, 343,  17, 298, 537, 742,  92, 104, 572, 620,\n",
-       "       654, 345, 337,  35, 328, 548, 649,  52, 720, 227, 329, 165, 453,\n",
-       "       789, 434, 391, 268, 372, 652, 722, 326, 521, 684, 333, 507, 314,\n",
-       "       200, 535, 449, 316, 648, 661, 601, 486, 204, 441, 420, 423, 686,\n",
-       "       347, 704,  96, 490, 685, 780, 731, 443, 706, 500, 287, 663, 773,\n",
-       "       273,  43, 711, 413, 692, 503, 352, 274, 446, 643, 249, 622, 732,\n",
-       "       568, 162,  59, 124, 628, 373, 738, 705, 734, 282, 497, 771, 584,\n",
-       "        78, 713, 658, 267, 542, 131, 603, 474, 247, 354, 115, 765, 569,\n",
-       "       133,  57, 158, 168, 683, 330, 445, 237, 456, 367, 226, 339, 390,\n",
-       "       140, 123, 597, 626,  27, 364, 107, 640, 245,  36, 219, 543,  99,\n",
-       "       723, 231,  64, 105, 675, 313, 777, 682, 727, 185, 382, 752, 779,\n",
-       "       674, 694, 358, 187, 218, 741, 221, 479, 545, 323, 392,  82, 235,\n",
-       "       120, 589, 292, 356, 471, 482, 747, 281, 375, 342, 673, 331, 561,\n",
-       "       418, 143, 491, 668,  15, 279, 645, 157, 217, 462, 512, 730, 335,\n",
-       "        26, 553, 565, 296, 210, 411, 726, 488, 248, 261, 346, 580, 590,\n",
-       "       635, 369, 216, 657, 178, 650,  47, 702, 209, 575, 374, 769, 492,\n",
-       "       359, 398, 728, 762, 527, 225, 266,  71, 695,  53, 563, 195, 700,\n",
-       "       518, 117, 619, 618, 190, 717, 122,   6, 665, 558,  40, 206, 173,\n",
-       "       793, 380,  79])"
+       "(32, 216, 144, 1)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "validation_generator."
+    "validation_generator.next()[0].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "b6356de9",
+   "execution_count": 24,
+   "id": "b8fcd38b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-04T22:55:49.859036Z",
-     "start_time": "2021-07-04T22:55:49.724842Z"
-    }
+     "end_time": "2021-07-06T13:35:04.542129Z",
+     "start_time": "2021-07-06T13:35:04.535031Z"
+    },
+    "scrolled": false
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0., 0., 0., 0., 0., 0., 1., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 1., 0.],\n",
-       "       [0., 1., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 1., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 1., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 1.],\n",
-       "       [0., 1., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 1., 0.],\n",
-       "       [0., 0., 0., 0., 0., 1., 0., 0.],\n",
-       "       [0., 0., 1., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 1., 0.],\n",
-       "       [0., 0., 0., 0., 1., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 1., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 1., 0., 0., 0.],\n",
-       "       [0., 1., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 1., 0., 0., 0., 0., 0., 0.],\n",
-       "       [1., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 1., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 1., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 1., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 1.],\n",
-       "       [0., 0., 0., 0., 1., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 1., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 1., 0.],\n",
-       "       [1., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 1., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 1.],\n",
-       "       [0., 0., 0., 0., 0., 1., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 1.],\n",
-       "       [0., 0., 0., 1., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 1., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 1., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 1.],\n",
-       "       [0., 0., 0., 0., 0., 1., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 1., 0.],\n",
-       "       [0., 1., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 1., 0., 0., 0., 0., 0.],\n",
-       "       [0., 1., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 1.],\n",
-       "       [0., 0., 0., 0., 0., 1., 0., 0.],\n",
-       "       [1., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 1., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 1., 0., 0., 0.],\n",
-       "       [1., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [1., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [1., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 1., 0., 0., 0.],\n",
-       "       [0., 0., 0., 1., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 1., 0.],\n",
-       "       [0., 0., 1., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 1., 0., 0.],\n",
-       "       [1., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 1., 0., 0., 0.],\n",
-       "       [1., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 1.],\n",
-       "       [0., 0., 0., 0., 0., 0., 1., 0.],\n",
-       "       [0., 0., 0., 0., 1., 0., 0., 0.],\n",
-       "       [1., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [1., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 1., 0., 0., 0., 0.],\n",
-       "       [1., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 1.],\n",
-       "       [0., 0., 0., 0., 1., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 1., 0.]], dtype=float32)"
+       "array([399, 184, 183, 201, 688, 144, 723, 492, 728, 194, 331, 324, 342,\n",
+       "       477,  23, 137, 789, 665, 697, 590, 292,  72, 160,  53, 158, 260,\n",
+       "       403, 335, 277, 350, 736, 556,  75, 189, 542, 607, 553, 745, 758,\n",
+       "       203, 712, 741, 569, 440, 394, 598, 489, 595, 714, 104, 795, 730,\n",
+       "       453, 418,  29,  74, 318, 589, 469, 699, 216,  60, 370, 224, 504,\n",
+       "       517, 612, 694, 524, 126, 311, 238, 709, 680, 751, 186, 639, 108,\n",
+       "       765, 583, 548, 511, 785, 747, 586, 313, 625, 487, 185, 354,  73,\n",
+       "       585, 248,  11, 283, 233, 768,   1, 281, 536, 267, 727, 310,  52,\n",
+       "       587, 717, 163, 165,  38,  14, 474,   4, 280, 516, 434, 367, 558,\n",
+       "         8, 518, 286, 778, 638, 190, 559, 205, 273, 124, 578, 420, 632,\n",
+       "       161, 604, 742, 419, 544, 288, 686,  42, 328, 502,  48,  67, 726,\n",
+       "       314, 315, 213, 616, 414, 520, 442, 573, 110, 622, 707, 390, 734,\n",
+       "       380, 705, 200, 540, 227, 396, 178, 307, 109, 480, 563, 457, 646,\n",
+       "       750, 631, 594, 740, 689, 481, 678, 379, 691, 656, 155,  25, 735,\n",
+       "       234, 119, 463, 381, 245, 580, 767, 513, 546,  56, 724, 555,  89,\n",
+       "        97, 221, 132, 560, 241, 368,  28, 285, 623, 603, 391, 169, 514,\n",
+       "       329, 256, 306, 131, 677,  39, 296, 512, 230, 660, 199, 459, 376,\n",
+       "       346, 784,  69, 433, 363, 642, 225,  81, 759, 250, 197, 614, 220,\n",
+       "       610, 464, 601, 493, 146, 644,  31, 637, 134, 400, 361, 413, 364,\n",
+       "       179, 320, 308, 159, 345, 670,  50, 125, 180, 416, 100,  85, 228,\n",
+       "       387, 412, 510, 208, 525, 532, 287, 704,  76, 780, 373, 613, 319,\n",
+       "       473, 557, 662,  98, 674, 606, 676,  24, 786,   6, 437, 142, 461,\n",
+       "        55, 500,   9, 718, 458, 415, 653, 284, 246, 436, 576, 243, 112,\n",
+       "        64, 630,  62, 377, 538, 355, 659, 450, 490, 366, 290,  58, 703,\n",
+       "       196, 774, 568, 634,  66, 698, 152, 422, 151, 276, 430, 441, 737,\n",
+       "        94, 593, 133,  96, 685, 138, 187, 175, 451, 214,  88, 710, 635,\n",
+       "       129, 655, 316, 761, 251, 617, 455, 289, 244, 770, 484,  86, 467,\n",
+       "       401, 139, 358, 375,  93, 571, 715, 618, 663,  21, 754, 641, 202,\n",
+       "       259, 552, 408, 271, 130, 343, 222, 323, 605, 219,  12, 666, 772,\n",
+       "       657, 690, 226,  59, 611, 790, 332, 279, 523, 592, 188, 776, 681,\n",
+       "       771, 624, 539, 566, 294, 106, 725, 121, 452, 738, 537, 170, 509,\n",
+       "       565,  33,  34, 334, 325,  92,  40, 353, 341, 312, 167, 231, 344,\n",
+       "        46, 527, 501, 336, 193, 439, 445, 719,  41, 588, 654, 731,  57,\n",
+       "        71, 783, 788, 321, 247, 258, 182,  45, 599, 264, 305, 668, 405,\n",
+       "       746, 352, 562,  99, 302, 209, 385, 392, 181, 140,  44, 696, 116,\n",
+       "       114, 711, 468, 429,  37, 431, 465, 111, 444, 554, 297, 168, 574,\n",
+       "       627,  70,  61, 766, 301, 721, 299, 141,  26, 716, 322, 326, 149,\n",
+       "        77, 460, 268, 621, 236, 148, 577, 793, 359, 640,  65, 695,  43,\n",
+       "       462,  13, 369, 298, 443, 218, 362, 650, 475, 424, 570, 470, 157,\n",
+       "       541, 763, 651, 398, 177, 648, 781, 753,  54, 447, 446, 779, 519,\n",
+       "       410, 304,  91, 257, 626,  68, 496, 382, 567, 195, 551, 756, 579,\n",
+       "       127, 483, 486, 675, 300, 143, 176, 744, 154, 615, 120, 339,   2,\n",
+       "       600, 237, 360, 628, 103, 596, 733, 521, 421, 752, 357, 762, 278,\n",
+       "       608, 282, 402,  90, 706, 409, 348, 528, 543, 749, 393, 508, 584,\n",
+       "       330, 534, 191, 386, 235, 652,  35, 249, 661, 499, 136, 265, 669,\n",
+       "       448, 769, 791, 572, 291, 211,  30, 407, 425, 507, 684, 777, 505,\n",
+       "       755, 371, 164, 471, 700, 217, 340, 550, 173, 272, 693, 438, 720,\n",
+       "       564, 253, 101, 378, 782, 620, 397, 476, 729, 411, 582, 309,   3,\n",
+       "       232,  83, 435, 255, 406, 633, 671,  19, 503,  16, 356, 123, 647,\n",
+       "       488, 365, 427, 773, 526, 115, 482, 491, 269, 223, 347, 672, 506,\n",
+       "        49, 204, 240, 549, 454, 432, 172, 530,  17, 338,  79, 449, 497,\n",
+       "       529,  27, 349,  15, 293,  87, 683,  63, 105, 760, 757, 498, 337,\n",
+       "       664,  78, 494,   0, 708, 254,  47, 649, 210, 252, 135,  20, 372,\n",
+       "       206, 171, 722, 739, 515, 118, 591, 581, 102, 295, 174, 261, 150,\n",
+       "       764, 682,  22, 229, 602, 522, 374,   5, 713, 428, 275,  10, 673,\n",
+       "       192,  80, 658, 535, 145, 215, 303, 383, 748, 466, 643, 575, 533,\n",
+       "       792, 636,  84, 327, 679, 479, 395, 239, 645, 775, 122, 485, 266,\n",
+       "       545, 629, 743, 404, 242,  95, 609, 263, 687, 262,  36, 147, 351,\n",
+       "       531, 667, 561, 389, 794,  18, 388,  82, 207, 166, 156, 478, 270,\n",
+       "       162, 153, 198, 417, 619, 495, 701, 732, 113, 692, 317, 117, 426,\n",
+       "       107, 384, 702, 274, 456, 212,   7, 333, 128, 547,  32, 597, 423,\n",
+       "        51, 472, 787])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "validation_generator.next()[1]"
+    "validation_generator.index_array"
    ]
   },
   {
